--- a/profapp/templates/company/companies_partners.html
+++ b/profapp/templates/company/companies_partners.html
@@ -29,7 +29,7 @@
 
         $scope.grid_action = function (id, action, row, column_name) {
             if(row.actions[action] == true){
-                return $ok($scope.url_change_status({company_id:$scope.company_id, portal_id:row.portal.id}) ,{action:action}, function(resp){}).finally(function () {
+                return $ok($scope.url_change_status({company_id:row.member.company.id, portal_id:row.portal_id}) ,{action:action, who:'member',eployment_company:row.company_id}, function(resp){}).finally(function () {
                     $scope.gridApi.grid.setGridData();
                 })
             }else{
