--- a/profapp/templates/article/form.html
+++ b/profapp/templates/article/form.html
@@ -13,7 +13,7 @@
 
     {#TODO: VH by OZ remove below line#}
     {% from 'macros.html' import scripts %}
-    {{ scripts(names=['croper']) }}
+    {{ scripts(names=['cropper']) }}
 
     <script>
         module.controller('article_edit', ['$scope', function ($scope) {
