--- a/profapp/templates/portal/portal_create.html
+++ b/profapp/templates/portal/portal_create.html
@@ -7,7 +7,7 @@
 
 {% block portal_content %}
     {% from 'macros.html' import scripts %}
-    {{ scripts(names=['croper']) }}
+    {{ scripts(names=['cropper']) }}
     <script>
         module.controller('portal_create', ['$scope', '$uibModal', function ($scope, $uibModal) {
             angularControllerFunction('CompanyMenuController', 'set_selected_company_menu')('home');
