--- a/profapp/templates/macros.html
+++ b/profapp/templates/macros.html
@@ -1,5 +1,5 @@
 {% macro scripts(names = [], type='text/javascript') -%}
-    {% if 'croper' in names %}
+    {% if 'cropper' in names %}
         <link href="//static.profireader.com/static/new/cropper/cropper.css" rel="stylesheet">
         <script src="//static.profireader.com/static/new/cropper/cropper.js"></script>
     {% endif %}
