--- a/profapp/templates/company/company_profile.html
+++ b/profapp/templates/company/company_profile.html
@@ -129,10 +129,21 @@
                             <li ng-show="company.own_portal.host">{{ _('Portal:') }} {{ company.own_portal.host }}</li>
                         </ul>
                         <div class="edit-block" ng-if="editing">
+                             <form name="form">
+            <legend>pattern</legend>
+            <input type="text" ng-model="name" name="name" pattern="[0-9]{4}"/>
+            <div ng-show="form.name.$error.pattern">Name doesn't match pattern!</div>
+        </form>
+        <form name="formTwo">
+            <legend>ng-pattern</legend>
+            <input type="text" ng-model="nameTwo" name="name" ng-pattern="/[0-9]{4}/"/>
+            <div ng-show="formTwo.name.$error.pattern">Name doesn't match pattern!</div>
+
                             <div class="col-lg-2">{{ _('Name:') }}</div>
                             <div class="col-lg-10 edit-data">
                                 <input pr-validation-answer="data_validation:name" type="text" class="form-control border-radius" value="{{ company.name }}"
-                                       id="basic-url" aria-describedby="basic-addon3" ng-model="data.name">
+                                       id="basic-url" aria-describedby="basic-addon3" ng-model="name" name="name" pattern="[A-Z]{4}">
+                                 <div ng-show="formTwo.name.$error.pattern">Name doesn't match pattern!</div>
                             </div>
                             <div class="col-lg-2">{{ _('Country:') }}</div>
                             <div class="col-lg-10 edit-data">
@@ -183,6 +194,7 @@
                                 <input pr-validation-answer="data_validation:lon" type="text" class="form-control border-radius" value="{{ company.lon }}"
                                        id="basic-url" aria-describedby="basic-addon3" ng-model="data.lon">
                             </div>
+            </form>
                         </div>
                     </div>
                 </div>
