--- a/profapp/templates/company/company_profile.html
+++ b/profapp/templates/company/company_profile.html
@@ -151,8 +151,7 @@
                                            id="basic-url" aria-describedby="basic-addon3" ng-model="company.name"
                                            name="company_name" ng-pattern="/[\wа-яёі']{3}/">
                                     <div ng-show="formCompany.company_name.$error.pattern" class="error-input">The
-                                        company name should be longer!
-                                    </div>
+                                        company name should be longer!</div>
                                 </div>
 
                                 <div class="col-lg-2">{{ _('Country:') }}</div>
@@ -162,8 +161,7 @@
                                            id="basic-url" aria-describedby="basic-addon3" ng-model="data.country"
                                            name="company_country" ng-pattern="/[\wа-яёі]{2}/">
                                     <div ng-show="formCompany.company_country.$error.pattern" class="error-input">The
-                                        country name should be longer!
-                                    </div>
+                                        country name should be longer!</div>
                                 </div>
                                 <div class="col-lg-2">{{ _('Region:') }}</div>
                                 <div class="col-lg-10 edit-data">
