--- a/profapp/templates/auth/confirmed.html
+++ b/profapp/templates/auth/confirmed.html
@@ -1,10 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "_ruslan/_index_layout.html" %}
+{% block title %}Profireader - Confirmation{% endblock title %}
+{% block head %}
+    {{ super() }}
+{% endblock head %}
 
-</body>
-</html>
+{% block portal_base %}
+    {{ super() }}
+{% endblock portal_base %}
+
+{% block portal_content %}
+
+<div class="container" ng-controller="UserLoginController1">
+    <h1 class="nice-title">Hello, {{ current_user.profireader_name }}!<span></span></h1>
+    <h3 pr-test="Confirmed">{{ _('You have confirmed your account successfully!') }}</h3>
+</div>
+{% endblock portal_content %}
