--- a/profapp/templates/general/user_edit_profile.html
+++ b/profapp/templates/general/user_edit_profile.html
@@ -6,8 +6,10 @@
 
 {% block portal_content %}
     <script>
-        module.controller('edit_user', ['$scope', function ($scope) {
+        module.controller('edit_user', ['$scope', '$af', function ($scope, $af) {
             $scope.$$translate = {{ translates('edit_user')|safe }};
+            $scope.$af = $af;
+            console.log($af);
 
             $scope.url_user_profile = {{ raw_url_for('user.profile')| safe }};
             $scope.save_user_profile = {{ raw_url_for('user.edit_profile')| safe }}
@@ -53,35 +55,25 @@
 
             <div class="row">
                 <!-- <img class="img-rounded profile-thumbnail" src="{{ user.gravatar(size=256) }}"><br> -->
-
-
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 profile-thumbnail">
-                    <div ng-model="data.avatar" pr-crop></div>
                 </div>
 
 
                 <form class="col-lg-8 col-md-8 col-sm-8 col-xs-8 edit-grup">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
-                        <span class="input-group-addon" id="sizing-addon1">{{ _('Your display name') }}</span>
-                        <input pr-validation-answer="data_validation:profireader_name" class="form-control"
-                               aria-describedby="sizing-addon1" type="text" placeholder="name"
-                               ng-model="data.user.profireader_name">
+                        <span class="input-group-addon" id="sizing-addon1">{{ _('Your first name *') }}</span>
+                        <input pr-validation-answer="data_validation:profireader_first_name" class="form-control" aria-describedby="sizing-addon1" type="text"
+                               placeholder="first name" ng-model="data.user.profireader_first_name">
+                    </div>
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
+                        <span class="input-group-addon" id="sizing-addon1">{{ _('Your last name *') }}</span>
+                        <input pr-validation-answer="data_validation:profireader_last_name" class="form-control" aria-describedby="sizing-addon1" type="text"
+                               placeholder="last name"
+                               ng-model="data.user.profireader_last_name">
                     </div>
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
                         <span class="input-group-addon" id="sizing-addon1">{{ _('Your email') }}</span>
                         <input class="form-control" aria-describedby="sizing-addon1" type="text" disabled="disabled"
                                placeholder="youremail@example.com" ng-model="data.user.profireader_email">
-                    </div>
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
-                        <span class="input-group-addon" id="sizing-addon1">{{ _('Your first name') }}</span>
-                        <input pr-validation-answer="data_validation:profireader_first_name" class="form-control" aria-describedby="sizing-addon1" type="text"
-                               placeholder="first name" ng-model="data.user.profireader_first_name">
-                    </div>
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
-                        <span class="input-group-addon" id="sizing-addon1">{{ _('Your last name') }}</span>
-                        <input pr-validation-answer="data_validation:profireader_last_name" class="form-control" aria-describedby="sizing-addon1" type="text"
-                               placeholder="last name"
-                               ng-model="data.user.profireader_last_name">
                     </div>
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
                         <span class="input-group-addon" id="sizing-addon1">{{ _('Birthday') }}</span>
@@ -130,16 +122,16 @@
                                   type="text" name="about" placeholder="Give us some information about you please"
                                   rows="8"
                                   cols="40" ng-model="data.user.about_me"></textarea>
-                    </div>
-                    <div class="item">
-                        <button class="btn btn-default save-profile pull-right
+                </div>
+                <div class="item">
+                    <button class="btn btn-default save-profile pull-right
                         border-radius"
-                                type="button" ng-click="$af.save(data)"
-                                ng-disabled="!$af.isActionAllowed(data, 'save') ">Save profile
-                        </button>
-                    </div>
-                </form>
-            </div>
+                            type="button" ng-click="$af.save(data)"
+                            ng-disabled="!$af.isActionAllowed(data, 'save') ">{{ _('Save profile') }}
+                    </button>
+                </div>
+            </form>
+
         </div>
     </div>
     {% endraw %}
