--- a/profapp/templates/pager.html
+++ b/profapp/templates/pager.html
@@ -11,7 +11,8 @@
 <script type="text/ng-template" id="cropper.html">
     {% raw %}
 
-    <div style="position: relative;  width: 100%; height: 100%; padding: 5px" class="img-container cropper-bg">
+    <div style="position: relative;  width: 100%; height: 100%; padding: 5px; margin-bottom: 5px" class="img-container
+    cropper-bg">
         <div  style="position: relative;  width: 100%; height: 100%;" class="img-container-cropper">
             <img style="width: 100%; height: 100%;"/>
         </div>
@@ -53,6 +54,7 @@
                         class="glyphicon {{ url_class_name }}"></span></span>
         </button>
 
+
         <button ng-if="resetable" class="btn btn-primary" type="button"
                 ng-click="resetModel()">
                 <span class="docs-tooltip" data-toggle="tooltip" title="Reset image"><span
@@ -60,8 +62,9 @@
         </button>
 
 
-        <input type="hidden" ng-model="data.article.image_file_id">
+
     </div>
+    <input type="hidden" ng-model="data.article.image_file_id">
     {% endraw %}
 </script>
 
